[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/Ooks/blocks/block_v1.png" type="Texture" id=1]
[ext_resource path="res://games/Ooks/blocks/all_tetrominos.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 72 )

[node name="block_straight" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -54 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 0, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 0, 54 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
